# ragstuffer

./: .gitignore  .secrets.baseline  CLAUDE.md  Containerfile  Containerfile.cuda  Containerfile.rocm  README.md  SECURITY.md  common.py  deploy-remote.sh  deploy-to-lennon.sh  docstore.py  ingest-remote.py  pyproject.toml  ragstuffer.env.example  ragstuffer.py  requirements.txt  setup.sh  test_common.py  test_docstore.py  test_extract_text_with_title.py  test_hypothesis.py  test_ingest_remote.py  test_ragstuffer.py  whitelist_vulture.py
.github/workflows/: ci.yml  container.yml  security.yml
docs/: admin-api.md  architecture.md  configuration.md  title-extraction.md
quadlets/: ragstuffer.container
ragstuffer/: __init__.py  __main__.py  metrics.py
tests/: test_live.py  test_metrics.py
